--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,17 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "*.js",
-      "use": "@vercel/node"
+      "src": "src/main.jsx",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "/api/(.*)",
+      "dest": "https://chatlore-api.onrender.com/api/$1"
     }
   ]
 }
