--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,6 +12,10 @@
     {
       "source": "/api/(.*)",
       "destination": "https://chatlore-api.onrender.com/api/$1"
-    }
+    },
+    {
+          "source": "/(.*)",
+          "destination": "/"
+      }
   ]
 }
